# dsync

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  db.rs  ignore.rs  lib.rs  main.rs
src/commands/: add.rs  clone.rs  init.rs  mod.rs  pull.rs  push.rs
src/files/: delete.rs  download.rs  get_metadata.rs  list_folder.rs  mod.rs  upload.rs
