[package]
name = "dsync"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.1"
lazy_static = "1.4.0"
serde = "1.0"