[package]
name = "dsync"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
# futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
clap = "3.0.0-beta.1"
# lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
bytes = "0.5"
rusqlite = { version = "0.23.1", features = ["bundled"] }
hex = "0.4"
log = "0.4"
env_logger = "0.7.1"